--- a/lounge.css
+++ b/lounge.css
@@ -1,7 +1,5 @@
 body {
-  font-size: small;
-  font-family: Verdana, Helvetica, Arial, sans-serif;
-  line-height: 1.6em;
+  font: small/1.6em Verdana, Helvetica, Arial, sans-serif;
 }
 
 h1,
@@ -18,9 +16,7 @@ h2 {
 }
 
 #guarantee {
-  line-height: 1.9em;
-  font-style: italic;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font: italic small/ 1.9em Georgia, 'Times New Roman', Times, serif;
   color: #444444;
   border-color: white;
   border-width: 1px;
@@ -36,15 +32,24 @@ h2 {
 }
 
 #elixir {
-  border-style: solid;
-  border-width: thin;
-  border-color: #007e7e;
+  border: solid thin #007e7e;
   width: 200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
+  padding: 0px 20px 20px 20px;
   margin-left: 20px;
   text-align: center;
-  background-image: url(/lounge/images/cocktail.gif);
-  background-repeat: repeat-x;
+  background: url(/lounge/images/cocktail.gif) repeat-x white;
+
+  line-height: 1;
+}
+#elixir h2 {
+  color: black;
+}
+#elixir h3 {
+  color: #d12c47;
+}
+#footer {
+  font-size: 50%;
+  line-height: normal;
+  text-align: center;
+  margin-top: 30px;
 }
