--- a/lounge.css
+++ b/lounge.css
@@ -53,3 +53,20 @@ h2 {
   text-align: center;
   margin-top: 30px;
 }
+
+.cd {
+  font-style: italic;
+}
+.artist {
+  font-weight: bold;
+}
+
+a:link {
+  color: green;
+}
+a:visited {
+  color: red;
+}
+a:hover {
+  color: yellow;
+}
